--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">Overall Fit</string>
+    <string-array name="ex_type">
+        <item>Chest</item>
+        <item>Back</item>
+        <item>Arms</item>
+        <item>Abdominal</item>
+        <item>Legs</item>
+        <item>Shoulders</item>
+        <item>Cardio</item>
+    </string-array>
 </resources>
