Deletion Added to Exercise List items number dynamically?

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
         <item>Legs</item>
         <item>Shoulders</item>
         <item>Cardio</item>
+        <item>Other</item>
     </string-array>
 </resources>
